@@ -1,4 +1,5 @@
 [CW6]
++ SyncProxyAndroid SDK: Implement integration of OnSystemRequest notification and system PutFile request.
 + SyncProxyAndroid SDK: changed reconnection scheduling logic
 
 [CW5]
